<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:contentDescription="Cover art"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/cover_art"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_gravity="center"
            android:src="@drawable/icon" >
        </ImageView>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/bookshelf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="switchToBookshelf"
                android:text="@string/bookshelf" >
            </Button>

            <Button
                android:id="@+id/contents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="switchToContents"
                android:text="@string/contents" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title" >
    </TextView>

    <SeekBar
        android:id="@+id/position_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </SeekBar>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal" >

        <TextView
            android:id="@+id/position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time" >
        </TextView>

        <TextView
            android:id="@+id/chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/chapter" >
        </TextView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration" >
        </TextView>
    </LinearLayout>

    <SeekBar
        android:id="@+id/chapter_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >
    </SeekBar>

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/speed" >
    </TextView>

    <SeekBar
        android:id="@+id/speed_slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </SeekBar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/prev_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="previousChapter"
            android:text="@string/prev_chapter" >
        </Button>

        <Button
            android:id="@+id/backward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="backward"
            android:text="@string/backward" >
        </Button>

        <ToggleButton
            android:id="@+id/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playPause"
            android:text="ToggleButton"
            android:textOff="Play"
            android:textOn="Pause" >
 android:layout_weight="1"
        </ToggleButton>

        <Button
            android:id="@+id/forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="forward"
            android:text="@string/forward" >
        </Button>

        <Button
            android:id="@+id/next_chapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_chapter" >
 android:onClick="nextChapter">
        </Button>
    </LinearLayout>

</LinearLayout>